--- a/analyze_edition/1.0.1
+++ b/analyze_edition/1.0.1
@@ -10,3 +10,22 @@ CREATE TABLE `sys_user` (
   `is_control_user` int(1) DEFAULT '0' COMMENT '管理用户的权限 1可用 0不可用',
   PRIMARY KEY (`id`)
 ) ENGINE=InnoDB AUTO_INCREMENT=11 DEFAULT CHARSET=utf8;
+
+
+######################### 运营中心关系表 #########################
+CREATE TABLE `operate_relationship` (
+  `id` bigint(20) DEFAULT NULL COMMENT 'id',
+  `unionid` bigint(20) DEFAULT NULL COMMENT 'unionid',
+  `parentid` tinyint(20) DEFAULT NULL COMMENT '邀请人',
+  `name` varchar(20) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '姓名',
+  `phone` varchar(11) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '联系手机',
+  `operatename` varchar(64) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '运营中心名称',
+  `crm` tinyint(1) DEFAULT NULL COMMENT 'crm支持：1支持 0不支持',
+  `status` tinyint(1) DEFAULT NULL COMMENT '状态：1正常  2关闭',
+  `not_contains` longtext CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci COMMENT '不包含下一级运营中心',
+  `contains` longtext CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci COMMENT '包含下一级运营中心',
+  `child_center_id` longtext CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci COMMENT '包含运营中心id',
+  `sync_time` datetime DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间',
+  `update_record` longtext COLLATE utf8mb4_general_ci COMMENT '更新记录',
+  `del_flag` int(1) NOT NULL DEFAULT '0'
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci;
