--- a/analyze_edition/1.0.3
+++ b/analyze_edition/1.0.3
@@ -1,4 +1,4 @@
-#每日订单统计表按天统计 不包含当天
+#每日订单统计表按天统计 不包含当天  针对这个代码  anastatistics/lianghao/secondorderbydata.py
 CREATE TABLE `lh_secorder_day` (
   `statistic_time` date DEFAULT NULL COMMENT '统计时间',
   `buy_order_count` bigint(20) DEFAULT NULL COMMENT '购买订单数量',
