--- a/analyze_edition/1.0.3
+++ b/analyze_edition/1.0.3
@@ -1,17 +1,27 @@
-#每日订单统计表按天统计 不包含当天  针对这个代码  anastatistics/lianghao/secondorderbydata.py
-CREATE TABLE `lh_secorder_day` (
-  `statistic_time` date DEFAULT NULL COMMENT '统计时间',
-  `buy_order_count` bigint(20) DEFAULT NULL COMMENT '购买订单数量',
-  `buy_lh_count` bigint(20) DEFAULT NULL COMMENT '购买靓号数量',
-  `buy_total_price` decimal(20,2) DEFAULT NULL COMMENT '采购总金额',
-  `sell_order_count` bigint(20) DEFAULT NULL COMMENT '出售订单数量',
-  `sell_lh_count` bigint(20) DEFAULT NULL COMMENT '出售靓号数量',
-  `sell_total_price` decimal(20,2) DEFAULT NULL COMMENT '出售总价格',
-  `public_order_count` bigint(20) DEFAULT NULL COMMENT '发布订单数量',
-  `public_lh_count` bigint(20) DEFAULT NULL COMMENT '发布靓号数量',
-  `public_total_price` decimal(20,2) DEFAULT NULL COMMENT '发布靓号总价',
-  `total_sell_fee` decimal(20,2) DEFAULT NULL COMMENT '总手续费',
-  `total_real_money` decimal(20,2) DEFAULT NULL COMMENT '总实收金额',
+# 用户每日订单数据统计报表--> anastatistics/lianghao/user_daily_order.py
+CREATE TABLE `user_daily_order_data` (
+  `day_time` date DEFAULT NULL COMMENT '统计日期',
+  `nickname` varchar(100) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '用户昵称',
+  `phone` varchar(20) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '手机号',
+  `unionid` bigint(20) DEFAULT NULL COMMENT '用户id',
+  `operate_id` bigint(20) DEFAULT NULL COMMENT '运营中心id',
+  `operatename` varchar(100) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '运营中心名称',
+  `leader_unionid` bigint(20) DEFAULT NULL COMMENT '运营中心负责人id',
+  `leader` varchar(100) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '运营中心负责人',
+  `leader_phone` varchar(20) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '运营中心负责人手机号',
+  `parentid` bigint(20) DEFAULT NULL COMMENT '上级id',
+  `parent_phone` varchar(20) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '上级手机号',
+  `buy_count` int(11) DEFAULT '0' COMMENT '采购订单数量',
+  `buy_pretty_count` int(11) DEFAULT '0' COMMENT '采购靓号数量',
+  `buy_total_price` decimal(17,2) DEFAULT '0.00' COMMENT '采购金额',
+  `publish_count` int(11) DEFAULT '0' COMMENT '发布订单数量',
+  `publish_pretty_count` int(11) DEFAULT '0' COMMENT '发布靓号数量',
+  `publish_total_price` decimal(17,2) DEFAULT '0.00' COMMENT '发布金额',
+  `sell_count` int(11) DEFAULT '0' COMMENT '出售订单数量',
+  `sell_pretty_count` int(11) DEFAULT '0' COMMENT '出售靓号数量',
+  `sell_total_price` decimal(17,2) DEFAULT '0.00' COMMENT '出售金额',
+  `truth_price` decimal(17,2) DEFAULT '0.00' COMMENT '出售实收金额',
+  `sell_fee` decimal(17,2) DEFAULT '0.00' COMMENT '出售手续费',
   `addtime` timestamp NULL DEFAULT CURRENT_TIMESTAMP COMMENT '入库时间',
   `updtime` timestamp NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间'
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
