--- a/analyze_edition/1.0.3
+++ b/analyze_edition/1.0.3
@@ -25,3 +25,28 @@ CREATE TABLE `user_daily_order_data` (
   `addtime` timestamp NULL DEFAULT CURRENT_TIMESTAMP COMMENT '入库时间',
   `updtime` timestamp NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间'
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
+
+
+
+CREATE TABLE `user_storage_value` (
+  `day_time` date DEFAULT NULL COMMENT '日期',
+  `hold_phone` varchar(20) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '手机号',
+  `unionid` bigint(20) DEFAULT NULL COMMENT '用户id',
+  `parentid` bigint(20) DEFAULT NULL COMMENT '归属上级id',
+  `nickname` varchar(100) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '用户名称',
+  `operatename` varchar(100) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '归属运营中心',
+  `no_tran_price` decimal(20,2) DEFAULT NULL COMMENT '不可转让价值',
+  `no_tran_count` int(11) DEFAULT NULL COMMENT '不可转让数量',
+  `transferred_count` int(11) DEFAULT NULL COMMENT '已转让数量',
+  `transferred_price` decimal(20,2) DEFAULT NULL COMMENT '已转让价值',
+  `public_count` int(11) DEFAULT NULL COMMENT '发布数量',
+  `public_price` decimal(20,2) DEFAULT NULL COMMENT '发布价值',
+  `use_total_price` decimal(20,2) DEFAULT NULL COMMENT '已使用价值',
+  `use_count` int(11) DEFAULT NULL COMMENT '已使用数量',
+  `hold_price` decimal(20,2) DEFAULT NULL COMMENT '持有数量',
+  `hold_count` int(11) DEFAULT NULL COMMENT '持有价值',
+  `tran_price` decimal(20,2) DEFAULT NULL COMMENT '可转让价值',
+  `tran_count` int(11) DEFAULT NULL COMMENT '可转让数量',
+  `addtime` timestamp NULL DEFAULT CURRENT_TIMESTAMP COMMENT '入库时间',
+  `updtime` timestamp NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间'
+) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='用户历史持有表';
