--- a/analyze_edition/1.0.5
+++ b/analyze_edition/1.0.5
@@ -33,3 +33,8 @@ CREATE TABLE `plat_lh_total_today` (
   `plat_total_count` bigint(20) DEFAULT NULL,
   `statistic_time` timestamp NULL DEFAULT CURRENT_TIMESTAMP
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_0900_ai_ci;
+
+用户资产相关的都要重新跑
+
+
+
