--- a/analyze_edition/1.0.5
+++ b/analyze_edition/1.0.5
@@ -70,3 +70,7 @@ CREATE TABLE `user_storage_value_todayH` (
   `updtime` timestamp NULL DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP COMMENT '更新时间'
 ) ENGINE=InnoDB DEFAULT CHARSET=utf8mb4 COLLATE=utf8mb4_general_ci COMMENT='用户每日名片网数据统计表';
 
+
+
+新增7位平台靓号总数统计 redis 每2小时半跑一次
+plat_lh_count_78
