--- a/analyze_edition/1.0.5
+++ b/analyze_edition/1.0.5
@@ -42,7 +42,7 @@ crm_user 待定是否需要更新
 用户资产相关的都要重新跑
 
 
-CREATE TABLE `user_storage_value_todayH` (
+CREATE TABLE `user_storage_value_hour` (
   `day_time` date DEFAULT NULL COMMENT '日期',
   `unionid` bigint(20) DEFAULT NULL COMMENT '用户id',
   `hold_phone` varchar(20) CHARACTER SET utf8mb4 COLLATE utf8mb4_general_ci DEFAULT NULL COMMENT '手机号',
